--- a/src/sass/components/main-content/_main-content.scss
+++ b/src/sass/components/main-content/_main-content.scss
@@ -141,8 +141,12 @@
 }
 
 .contact__details {
-  padding: 80px 0;
+  padding: 90px 0;
   text-align: center;
+
+  @media screen and (min-width: 992px) {
+    padding: 75px 0 80px;
+  }
 }
 
 .contact__heading {
@@ -195,10 +199,11 @@
   padding: 10px 15px;
   width: 100%;
   border-radius: 3px;
+  min-height: 105px;
 
   @media screen and (min-width: 992px) {
     padding: 10px;
-    width: 815px;
+    max-width: 805px;
   }
 }
 
@@ -206,7 +211,7 @@
   margin-top: 40px;
 
   @media screen and (min-width: 992px) {
-    margin-top: 20px;
+    margin-top: 15px;
   }
 
   .a-btn {
